# ParallelProgrammingMPI

./: CMakeLists.txt  main.cpp
